testsuite/escript/errors/errors004-program-parameter-same-name-as-function.err1
Expected arguments or right-paren in program arglist, got 'Func(1,0): print'
